bk_ida/gccida/c0/compute_use_by_pseudos
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/compute_use_by_pseudos/src/reload1.c:1030:20: error: expected identifier or '('
unsigned __int64 *(short *)0x; // [rsp+28h] [rbp-38h] 
                   ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/compute_use_by_pseudos/src/reload1.c:1030:20: error: expected ')'
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/compute_use_by_pseudos/src/reload1.c:1030:19: note: to match this '('
unsigned __int64 *(short *)0x; // [rsp+28h] [rbp-38h] 
                  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/compute_use_by_pseudos/src/reload1.c:1031:16: error: expected identifier or '('
unsigned int *(short *)0xnum_; // [rsp+34h] [rbp-2Ch] 
               ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/compute_use_by_pseudos/src/reload1.c:1031:16: error: expected ')'
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/compute_use_by_pseudos/src/reload1.c:1031:15: note: to match this '('
unsigned int *(short *)0xnum_; // [rsp+34h] [rbp-2Ch] 
              ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/compute_use_by_pseudos/src/reload1.c:1038:12: error: invalid suffix 'xnum_' on integer constant
*(short *)0xnum_ = 0; 
           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/compute_use_by_pseudos/src/reload1.c:1042:12: error: invalid suffix 'xnum_' on integer constant
*(short *)0xnum_ = 0; 
           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/compute_use_by_pseudos/src/reload1.c:1046:20: error: invalid suffix 'xnum_' on integer constant
while ( *(short *)0xnum_ < 2 ) 
                   ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/compute_use_by_pseudos/src/reload1.c:1048:12: error: invalid suffix 'x' on integer constant
*(short *)0x = ptr_->bits[*(short *)0xnum_]; 
           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/compute_use_by_pseudos/src/reload1.c:1048:38: error: invalid suffix 'xnum_' on integer constant
*(short *)0x = ptr_->bits[*(short *)0xnum_]; 
                                     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/compute_use_by_pseudos/src/reload1.c:1049:17: error: invalid suffix 'x' on integer constant
if ( *(short *)0x ) 
                ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/compute_use_by_pseudos/src/reload1.c:1053:40: error: invalid suffix 'x' on integer constant
if ( ( ( 1LL << bit_num_) & *(short *)0x) != 0 ) 
                                       ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/compute_use_by_pseudos/src/reload1.c:1055:12: error: invalid suffix 'x' on integer constant
*(short *)0x &= ~( 1LL << bit_num_); 
           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/compute_use_by_pseudos/src/reload1.c:1056:33: error: invalid suffix 'xnum_' on integer constant
regno = bit_num_ + ( *(short *)0xnum_ << 6) + ( ptr_->indx << 7); 
                                ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/compute_use_by_pseudos/src/reload1.c:1096:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)cfun->emit->x_regno_reg_rtx[regno])] != MODE_COMPLEX_INT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/compute_use_by_pseudos/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/compute_use_by_pseudos/src/reload1.c:1097:7: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v11 = mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)cfun->emit->x_regno_reg_rtx[regno])] == MODE_COMPLEX_FLOAT; 
      ^~~~~~~~~~~~
      mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/compute_use_by_pseudos/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/compute_use_by_pseudos/src/reload1.c:1112:15: error: use of undeclared identifier 'off_88ECD0'
fancy_abort( &off_88ECD0[4], 573, "compute_use_by_pseudos"); 
              ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/compute_use_by_pseudos/src/reload1.c:1114:18: error: invalid suffix 'x' on integer constant
if ( !*(short *)0x ) 
                 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/compute_use_by_pseudos/src/reload1.c:1121:14: error: invalid suffix 'xnum_' on integer constant
++*(short *)0xnum_; 
             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/compute_use_by_pseudos/src/reload1.c:1123:12: error: invalid suffix 'xnum_' on integer constant
*(short *)0xnum_ = 0; 
           ^
19 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/compute_use_by_pseudos/src/obj/reload1.o] Error 1
